<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="ac"
            type="android.app.Activity" />

        <variable
            name="vm"
            type="com.ds.worldfunclub.viewmodel.OrderSearchModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFF"
        android:orientation="vertical">

        <FrameLayout
            status="@{ac}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="4dp"
            android:background="#FFF"
            android:gravity="center_vertical"
            android:paddingStart="14dp"
            android:paddingEnd="14dp">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/shape_search_bg"
                android:gravity="center_vertical"
                android:transitionName="@string/tran_search_bound">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="14dp"
                    android:src="@mipmap/ic_search"
                    android:transitionName="@string/tran_search_img" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="搜索商品名称"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:textColor="#999999"
                    android:textSize="14sp"
                    android:transitionName="@string/tran_search_edit" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:onClick="@{()->ac.finishAfterTransition()}"
                android:text="取消"
                android:textColor="#333333"
                android:textSize="16sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="14dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="搜索历史"
                android:textColor="#FF333333"
                android:textSize="15dp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:padding="3dp"
                android:src="@mipmap/ic_del" />


        </LinearLayout>

        <com.ds.worldfunclub.widget.FlowLayout
            android:id="@+id/history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="14dp">

        </com.ds.worldfunclub.widget.FlowLayout>
    </LinearLayout>
</layout>

