<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="com.ds.worldfunclub.app.PubFunction" />
        <variable
            name="ac"
            type="android.app.Activity" />

        <variable
            name="vm"
            type="com.ds.worldfunclub.viewmodel.LoginPhoneModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                status="@{ac}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFF" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="206dp"
                android:layout_marginTop="45dp">


                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="220dp"
                    android:layout_height="match_parent"
                    android:src="@mipmap/ic_splash_r" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                status="@{ac}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFF" />


            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="26dp"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="8dp"
                android:src="@mipmap/ic_icon_large"
                android:transitionName="@string/tran_home_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginBottom="11dp"
                android:text="Hi 你好"
                android:textColor="#FF354D"
                android:textSize="26.5sp"
                android:textStyle="bold"
                android:transitionName="@string/tran_home_title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginBottom="93dp"
                android:text="环球途乐会欢迎您"
                android:textSize="14dp"
                android:transitionName="@string/tran_home_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="26dp"
                android:layout_marginEnd="26dp"
                android:gravity="center_vertical">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="17dp"
                        android:background="@null"
                        android:hint="请输入11位手机号码"
                        android:padding="4dp"
                        android:text="@={vm.phone}" />

                </LinearLayout>

                <ImageView
                    android:layout_width="20.5dp"
                    android:layout_height="20.5dp"
                    android:layout_marginEnd="6dp"
                    android:onClick="@{()->vm.cleanPhone()}"
                    android:padding="4dp"
                    android:src="@mipmap/ic_close2" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="26dp"
                android:layout_marginEnd="26dp"
                android:background="#AAAAAA" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginEnd="26dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5.5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="17dp"
                        android:background="@null"
                        android:hint="请输入验证码"
                        android:padding="4dp"
                        android:text="@={vm.code}" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#AAAAAA" />
                </LinearLayout>

                <TextView
                    android:enabled="@{ !vm.vCodeState }"
                    selectView="@{PubFunction.or(vm.vCodeState, vm.phone.length()==0)}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5.5dp"
                    android:background="@drawable/selector_login_code"
                    android:onClick="@{(v)->vm.sendCode(v)}"
                    android:text="获取验证码"
                    android:textColor="#FFF" />
            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:enabled="@{vm.code.length()!=0}"
                selectView="@{vm.code.length()==0}"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="26dp"
                android:layout_marginEnd="26dp"
                android:background="@drawable/selector_login"
                android:gravity="center"
                android:onClick="@{()->vm.login()}"
                android:text="完成"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="84dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="已阅读并同意"
                    android:textColor="#AAAAAA"
                    android:textSize="10sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="《环球途乐会用户协议》"
                    android:textColor="#4E93E2"
                    android:textSize="10sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="和"
                    android:textColor="#AAAAAA"
                    android:textSize="10sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="《环球途乐会用户隐私政策》"
                    android:textColor="#4E93E2"
                    android:textSize="10sp" />
            </LinearLayout>
        </LinearLayout>

    </FrameLayout>
</layout>